--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    
+    "primeflex": "^3.3.1",
+    "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
