--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    
+    "@primevue/themes": "^4.0.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -22,5 +23,10 @@
     "jsdom": "^24.1.0",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
-  }
+  },
+  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
