--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [ "./src/*" ]
+    },
+    "noImplicitAny": false,
   },
   "exclude": ["node_modules", "dist"]
 }
